commnet swag and token
